Closed Bug 1172885 Opened 9 years ago Closed 9 years ago

nsHttpChannel::BeginConnect must call AsyncAbort in the case of an error

Categories

(Core :: Networking: HTTP, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla41
Tracking Status
firefox41 --- fixed

People

(Reporter: dragana, Assigned: dragana)

References

Details

Attachments

(1 file)

nsHttpChannel::BeginConnect must call AsyncAbort in the case of an error
Assignee: nobody → dd.mozilla
Status: NEW → ASSIGNED
Attachment #8617273 - Flags: review?(valentin.gosu)
Comment on attachment 8617273 [details] [diff] [review]
bug_1172885_v1.patch

Review of attachment 8617273 [details] [diff] [review]:
-----------------------------------------------------------------

Thanks!
Attachment #8617273 - Flags: review?(valentin.gosu) → review+
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/9dc9aa49c0da
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: