Bug 1172885 - nsHttpChannel::BeginConnect must call AsyncAbort in the case of an error. r=valentin